--- a/my_app/views/record.ejs
+++ b/my_app/views/record.ejs
@@ -24,7 +24,7 @@
             <h1>レストランを登録する</h1>
           </div>
             <!-- 情報記入部分 -->
-            <form action="/submitInfomation/" method="post" class="record-information">
+            <form action="/submitInformation/" method="post" class="record-information">
                 <div class="form-group">
                   <label for="nameInput">国名</label>
                   <!-- Country names and Country Code -->
