--- a/my_app/views/information.ejs
+++ b/my_app/views/information.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Mazellan Food Record</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="information.css">
     </head>
 
     <body>
